// Request Service ERD
// Service: request-service (gộp intake + catalog)
// Database: request_db
// Người 2

// API Examples:
// POST /requests
//   - Body: { "request_type": "transcription", "description": "Transcribe this song", "user_id": "uuid" }
//   - Response: { "request_id": "uuid", "status": "pending" }
//
// GET /requests/{id}
//   - Response: { "request_id": "uuid", "title": "Song transcription", "status": "pending" }
//
// GET /requests/{id}/booking-selections
//   - Response: { "artists": [...], "equipment": [...], "instruments": [...] }
//
// GET /catalog/equipment
//   - Response: [{ "equipment_id": "uuid", "equipment_name": "Yamaha C3 Piano", "rental_fee": 50000 }]
//
// GET /catalog/notation-instruments
//   - Response: [{ "instrument_id": "uuid", "instrument_name": "Piano", "usage": "both" }]
//
// Events: request.created, request.updated, selection.changed

// Intake tables
Table service_requests {
  request_id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, note: 'Soft reference to identity-service']
  manager_user_id uuid [note: 'Soft reference to identity-service']
  request_type service_type [not null]
  
  // Thông tin cá nhân
  contact_name varchar(100)
  contact_phone varchar(20)
  contact_email varchar(100)
  
  music_options jsonb
  tempo_percentage decimal(5,2)
  has_vocalist boolean [default: false]
  external_guest_count integer [default: 0]
  title varchar(200)
  description text [not null]
  status request_status [default: 'pending']
  
  Note: 'Yêu cầu dịch vụ từ khách hàng. tempo_percentage dùng cho transcription (80% = chậm 20%, 50% = chậm 50%). has_vocalist: true nếu customer chọn ca sĩ. music_options: NULL cho transcription. external_guest_count: số người customer mang theo cho studio booking. contact_*: thông tin cá nhân linh hoạt.'
  
  indexes {
    user_id
    manager_user_id
    status
    request_type
  }
}

Table request_booking_artists {
  request_booking_artist_id uuid [pk, default: `gen_random_uuid()`]
  request_id uuid [ref: > service_requests.request_id, not null]
  specialist_id uuid [not null, note: 'Soft reference to specialist-service']
  role recording_role [not null]
  skill_id uuid [note: 'Soft reference to specialist-service']
  
  Note: 'Nghệ sĩ customer chọn cho studio booking. Dùng cho luồng 2 (arrangement_with_recording) và luồng 3 (recording).'
  
  indexes {
    request_id
    specialist_id
    (request_id, specialist_id, skill_id) [unique]
    role
    skill_id
  }
}

Table request_booking_equipment {
  request_booking_equipment_id uuid [pk, default: `gen_random_uuid()`]
  request_id uuid [ref: > service_requests.request_id, not null]
  equipment_id uuid [ref: > equipment.equipment_id, not null]
  quantity integer [default: 1]
  
  Note: 'Thiết bị customer chọn cho studio booking. Dùng cho luồng 2 (arrangement_with_recording) và luồng 3 (recording).'
  
  indexes {
    request_id
    equipment_id
    (request_id, equipment_id) [unique]
  }
}

Table request_notation_instruments {
  request_instrument_id uuid [pk, default: `gen_random_uuid()`]
  request_id uuid [ref: > service_requests.request_id, not null]
  instrument_id uuid [ref: > notation_instruments.instrument_id, not null]

  Note: 'Danh sách nhạc cụ ảo được chọn cho từng request. Dùng chủ yếu cho Arrangement (đa chọn). Luồng 1 Transcription giữ 1 nhạc cụ chính ở service_requests.requested_instrument_id.'

  indexes {
    request_id
    instrument_id
    (request_id, instrument_id) [unique]
  }
}

// Catalog tables
Table notation_instruments {
  instrument_id uuid [pk, default: `gen_random_uuid()`]
  instrument_name varchar(100) [not null]
  usage notation_instrument_usage [default: 'both']
  is_active boolean [default: true]

  Note: 'Danh mục nhạc cụ ảo dùng trong ký âm/notation trên máy (không phải thiết bị thật)'

  indexes {
    instrument_name
    is_active
  }
}

Table equipment {
  equipment_id uuid [pk, default: `gen_random_uuid()`]
  equipment_name varchar(100) [not null]
  brand varchar(50)
  model varchar(100)
  description text
  specifications jsonb
  rental_fee decimal(12,2) [default: 0]
  
  total_quantity integer [default: 1]
  maintenance_quantity integer [default: 0]
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Note: 'Thiết bị cụ thể: Yamaha C3 Piano, Fender Stratocaster Guitar, Pearl Drum Kit, etc.'
  
  indexes {
    equipment_name
    brand
    model
    (brand, model) [unique]
    is_active
    total_quantity
    maintenance_quantity
  }
}

Table skill_equipment_mapping {
  mapping_id uuid [pk, default: `gen_random_uuid()`]
  skill_id uuid [not null, note: 'Soft reference to specialist-service']
  equipment_id uuid [ref: > equipment.equipment_id, not null]
  
  Note: 'Mapping skill với equipment phù hợp. Customer tự chọn equipment từ danh sách này. VD: Piano skill → [Yamaha C3, Steinway Model D, Digital Piano]'
  
  indexes {
    skill_id
    equipment_id
    (skill_id, equipment_id) [unique]
  }
}

Table pricing_matrix {
  pricing_id uuid [pk, default: `gen_random_uuid()`]
  service_type service_type [not null]
  unit_type unit_type [not null]
  base_price decimal(12,2) [not null]
  currency currency_type [default: 'VND']
  description text
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  Note: 'Bảng giá chuẩn theo service type và unit type'
  
  indexes {
    service_type
    currency
    is_active
  }
}

Table feedback {
  feedback_id uuid [pk, default: `gen_random_uuid()`]
  request_id uuid [ref: > service_requests.request_id, not null]
  user_id uuid [not null, note: 'Soft reference to identity-service']
  rating integer [not null]
  comment text
  feedback_type feedback_type [not null]
  created_at timestamp [default: `now()`]
  
  Note: 'Phản hồi từ khách hàng về service request'
  
  indexes {
    request_id
    user_id
    feedback_type
    created_at
  }
}

Table outbox_events {
  event_id uuid [pk, default: `gen_random_uuid()`]
  aggregate_id uuid [not null]
  aggregate_type text [not null]
  event_type text [not null]
  event_payload jsonb [not null]
  occurred_at timestamptz [not null, default: `now()`]
  published_at timestamptz
  retry_count integer [not null, default: 0]
  last_error text
  next_retry_at timestamptz
  trace_id text
  correlation_id text
  
  Note: 'Event publishing'
  
  indexes {
    aggregate_id
    aggregate_type
    event_type
    occurred_at
    (next_retry_at)
  }
}

Table consumed_events {
  event_id uuid [not null]
  consumer_name text [not null]
  processed_at timestamptz [not null, default: `now()`]
  
  Note: 'Idempotency - PK(event_id, consumer_name), INSERT ... ON CONFLICT DO NOTHING'
  
  indexes {
    (event_id, consumer_name) [unique, pk]
    consumer_name
    processed_at
  }
}

// Enums
Enum service_type {
  transcription
  arrangement
  arrangement_with_recording
  recording
}

Enum request_status {
  pending
  contract_sent
  contract_signed
  approved
  in_progress
  completed
  cancelled
  rejected
}

Enum recording_role {
  vocalist
  instrumentalist
  both
}

Enum notation_instrument_usage {
  transcription
  arrangement
  both
}

Enum unit_type {
  per_minute
  per_song
  per_hour
  fixed_price
}

Enum currency_type {
  VND
  USD
  EUR
}

Enum feedback_type {
  service_quality
  communication
  timeliness
  overall_experience
}